--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -18,9 +18,9 @@
             <button type="submit">Entrar</button>
         </form>
         <div class="links">
-            <a href="#">Esqueci minha senha</a>
+            <a href="{% url 'forgot-password' %}">Esqueci minha senha</a>
             <br>
-            <a href="#">Criar uma conta</a>
+            <a href="{% url 'new-user' %}">Criar uma conta</a>
         </div>
     </div>
 </body>
