configurando arquivo base.html

--- a/templates/login/forgotPassword.html
+++ b/templates/login/forgotPassword.html
@@ -1,11 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>recupere sua senha aqui</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block title %}
+Recuperar Senha
+{% endblock %}
+{% block content %}
+    <div class="login-container">
+        <h1>Recuperar Senha</h1>
+        <form method="post">
+            {% csrf_token %}
+            <input type="email" name="email" placeholder="Email" required>
+            <button type="submit">Enviar Link de Recuperação</button>
+        </form>
+        <div class="links">
+            <a href="{% url 'login' %}">Voltar ao Login</a>
+        </div>
+    </div>
+{% endblock %}      
