--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -1,14 +1,9 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="{% static '/styles.css' %}">
+{% extends 'base.html' %}
+{% block title %}
+login
+{% endblock %}
+{% block content %}
 
-</head>
-<body>
     <div class="login-container">
         <h1>Login</h1>
         <form method="post">
@@ -23,5 +18,4 @@
             <a href="{% url 'new-user' %}">Criar uma conta</a>
         </div>
     </div>
-</body>
-</html>
+{% endblock %}    
