--- a/templates/login/newUser.html
+++ b/templates/login/newUser.html
@@ -1,13 +1,8 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Criar Conta</title>
-    <link rel="stylesheet" href="{% static '/styles.css' %}">
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %}
+Novo Usuario
+{% endblock %}
+{% block content %}
     <div class="login-container">
         <h1>Criar Conta</h1>
         <form method="post">
@@ -22,5 +17,4 @@
             <a href="{% url 'login' %}">Já tem uma conta? Faça login</a>
         </div>
     </div>
-</body>
-</html>
+{% endblock %}
